<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<ProgressBar
		android:id="@+id/pb"
		style="?android:attr/progressBarStyleHorizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_margin="20dp"
		android:visibility="gone" />

	<ListView
		android:id="@+id/gifs_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<LinearLayout
		android:id="@+id/first_disclaimer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#DDFFFFFF"
		android:clickable="true"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="20dp"
		android:visibility="gone" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="15dp"
			android:gravity="center"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="2"
			android:shadowRadius="2"
			android:text="@string/first_disclaimer"
			android:textColor="#333333"
			android:textSize="21sp" />

		<TextView
			android:id="@+id/ascii_loading"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="30dp"
			android:gravity="center"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="2"
			android:shadowRadius="2"
			android:textColor="#333333"
			android:textSize="21sp" />

		<TextView
			android:id="@+id/disclaimer_notifs"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="15dp"
			android:gravity="center"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="2"
			android:shadowRadius="2"
			android:text="@string/first_disclaimer_notifs"
			android:textColor="#333333"
			android:textSize="21sp" />

		<TextView
			android:id="@+id/disclaimer_valider"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="2"
			android:shadowRadius="2"
			android:text="@string/first_disclaimer_valider"
			android:textColor="#333333"
			android:textSize="21sp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/about"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#CC000000"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="20dp"
		android:visibility="gone" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:shadowColor="#000000"
			android:shadowDx="0"
			android:shadowDy="2"
			android:shadowRadius="2"
			android:text="@string/about"
			android:textColor="#DDDDDD"
			android:textSize="21sp" />
	</LinearLayout>
	
	<LinearLayout
        android:id="@+id/kitkat_actionbar_notifs"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone" />

</RelativeLayout>